; ModuleID = '/home/carl/AnghaBench/kphp-kdb/TL/extr_tlclient.c_open_log.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/TL/extr_tlclient.c_open_log.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@logname = common dso_local global i64 0, align 8
@O_WRONLY = common dso_local global i32 0, align 4
@O_APPEND = common dso_local global i32 0, align 4
@O_CREAT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @open_log to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @open_log() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* @logname, align 8
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %22

4:                                                ; preds = %0
  %5 = load i64, i64* @logname, align 8
  %6 = load i32, i32* @O_WRONLY, align 4
  %7 = load i32, i32* @O_APPEND, align 4
  %8 = or i32 %6, %7
  %9 = load i32, i32* @O_CREAT, align 4
  %10 = or i32 %8, %9
  %11 = call i32 @open(i64 %5, i32 %10, i32 416)
  store i32 %11, i32* %1, align 4
  %12 = icmp ne i32 %11, -1
  br i1 %12, label %13, label %22

13:                                               ; preds = %4
  %14 = load i32, i32* %1, align 4
  %15 = call i32 @dup2(i32 %14, i32 2)
  %16 = load i32, i32* %1, align 4
  %17 = icmp sgt i32 %16, 2
  br i1 %17, label %18, label %21

18:                                               ; preds = %13
  %19 = load i32, i32* %1, align 4
  %20 = call i32 @close(i32 %19)
  br label %21

21:                                               ; preds = %18, %13
  br label %22

22:                                               ; preds = %21, %4, %0
  ret void
}

declare dso_local i32 @open(i64, i32, i32) #1

declare dso_local i32 @dup2(i32, i32) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
